testdata/invalidwiki/Еще одна страница/__page.text
g fg hfg 
fghfgjh
fgjgjgj